# locavox

./: .env.docker  .gitignore  README.md  docker-compose.yml  install_dependencies.sh  locavox.db
backend/: .env.example  README.md  locavox.db  main.py  models.py  pyproject.toml  requirements.txt  run.py  storage.py  update_imports.py
backend/locavox/: .env.example  base_models.py  cli.py  config.py  config_helpers.py  database.py  db_migrations.py  dependencies.py  embeddings.py  lance_query_builder.py  llm_search.py  logger.py  main.py  models.py  models_migration.py  storage.py  topic_registry.py
backend/locavox/db/: database.py  topics.py
backend/locavox/models/: __init__.py  base_models.py  message.py  topic.py  user.py
backend/locavox/models/schemas/: __init__.py  base.py  message.py  specialized_topics.py  topic.py  user.py  user_address.py
backend/locavox/models/sql/: base.py  topic.py  user.py  user_address.py
backend/locavox/routers/: __init__.py  auth.py  messages.py  search.py  topics.py  user_addresses.py  users.py
backend/locavox/services/: __init__.py  auth_service.py  message_service.py  password_service.py  topics.py  user_address_service.py  user_service.py
backend/locavox/tools/: __init__.py  add_user_address_columns.py  add_user_columns.py  create_admin.py  db_migration.py  fix_deps.py  log_tables.py  reset_database.py
backend/locavox/utils/: geocoding.py  security.py
backend/mock/: mockData.js  mockServer.js
backend/scripts/: admin_token.txt  create_topics.sh  create_topics_direct.sh  debug_token.py  generate_test_token.py  generate_token.py
backend/tests/: conftest.py  debug_db_schema.py  run_tests.py  test_api.py  test_auth_service.py  test_integration.py  test_message_handling.py  test_message_limits.py  test_optimized_user_queries.py  test_topics_endpoint.py  test_topics_endpoints.py  test_user_endpoints.py  test_user_messages_endpoint.py  test_user_messages_stress.py  utils.py
docker/postgres/: Dockerfile
frontend/: .env.production  .gitignore  README.md  create-assets.sh  create-favicon.sh  index.html  mock-api-fix.sh  package-lock.json  package.json  rename-routes-fix.sh  setup-mock-api.sh  setup.sh  start-mock-api-alt.sh  start-mock-api-any-port.sh  start-mock-api.sh  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: example.ts
(+54 files in other folders)
